--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@ logs
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
+
+# Framework dependencies
+framework/vendor
