--- a/framework/composer.json
+++ b/framework/composer.json
@@ -9,6 +9,7 @@
         }
     ],
     "require": {
-        "philo/laravel-blade": "^3.1"
+        "windwalker/renderer": "2.*",
+        "illuminate/view": "4.*"
     }
 }
