--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         }
     ],
     "require": {
+        "php": ">=5.6.0",
         "windwalker/renderer": "2.*",
         "illuminate/view": "4.*"
     },
