--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "anrw/wp-scratch-theme",
+    "type": "Wordpress-theme",
     "description": "Wordpress Theme Boilerplate",
     "license": "GNU GPL",
     "authors": [
@@ -11,7 +12,8 @@
     "require": {
         "php": ">=5.6.0",
         "windwalker/renderer": "2.*",
-        "illuminate/view": "4.*"
+        "illuminate/view": "4.*",
+        "composer/installers": "^1.0"
     },
     "require-dev": {
         "wp-coding-standards/wpcs": "dev-master",
@@ -21,5 +23,9 @@
         "psr-4": {
             "Classy\\": "app/classes"
         }
+    },
+    "scripts": {
+        "cs": "phpcs --standard=phpcs.ruleset.xml app/ -s",
+        "md": "phpmd app text phpmd.ruleset.xml"
     }
 }
