--- a/.gitignore
+++ b/.gitignore
@@ -29,23 +29,8 @@ node_modules
 # Framework dependencies
 vendor
 
-# ignore OS generated files
-ehthumbs.db
-Thumbs.db
-
-# ignore Editor files
+# IDE files
 *.sublime-project
 *.sublime-workspace
 *.komodoproject
-
-# ignore databases
-#*.sql
-*.sqlite
-
-# ignore packaged files
-*.7z
-*.gz
-*.rar
-*.tar
-*.zip
-*.spc
+*.idea
