--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
     ],
     "require": {
         "php": ">=5.6.0",
-        "windwalker/renderer": "2.*",
-        "illuminate/view": "4.*",
+        "windwalker/renderer": "~3.0",
+        "illuminate/view": "^5.2",
         "composer/installers": "^1.0"
     },
     "require-dev": {
